name:                recorder
version:             0.1.0.0
synopsis:            Generate records from a mysql database schema
description:         Please see README.md
homepage:            http://github.com/githubuser/recorder#readme
license:             BSD3
license-file:        LICENSE
author:              Andre Paquet
maintainer:          andre.paquet@gmail.com
copyright:           2016 Andre Paquet
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable recorder-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mysql-simple
                     , optparse-generic
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jimpeak/recorder
